# rolldown

./: '  .cursorignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .insta.yaml  .ls-lint.json  .ls-lint.yml  .oxfmtrc.json  .oxlintignore  .oxlintrc.json  .prettierignore  .taplo.toml  .typos.toml  .yarnrc.yml  AGENTS.md  CHANGELOG-2024.md  CHANGELOG-2025.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  DOC.md  GITHUB_ISSUE_COMMENT.md  ISSUE_2628_ANALYSIS.md  LICENSE  MAINTENANCE.md  README.md  RESOLVER_TESTS.md  TESTING_OXC_PR.md  THIRD-PARTY-LICENSE  TODO_IMPORT_CHAIN.md  \  b.js  cliff.toml  clippy.toml  codecov.yml  cspell.json  (+37 more)
crate-usage-analyzer/: CLAUDE.md  Cargo.toml  README.md  baseline_report_v3_ast.json  baseline_report_v4_trait_detection.json
crate-usage-analyzer/scripts/: analyze_improvement.py
crate-usage-analyzer/src/: analyzer.rs  analyzer_v3.rs  ast_parser.rs  cache.rs  main.rs  parallel_analyzer.rs  re_export_detector.rs  report.rs  symbol_graph.rs  trait_impl_tracker.rs  usage_analyzer.rs  workspace_resolver.rs
crates/bench/: Cargo.toml  build.rs
crates/bench/benches/: bench.rs  bundle.rs  remapping.rs  scan.rs  threejs.rs
crates/bench/src/: lib.rs
crates/bench/tests/: link_baseline.rs  link_trace_global.rs
crates/bench_native_lib_plugin/: Cargo.toml
crates/bench_native_lib_plugin/src/: lib.rs
crates/rolldown/: Cargo.toml
crates/rolldown-wasm/: Cargo.toml
crates/rolldown-wasm/src/: lib.rs
crates/rolldown/examples/: _config.json  a.js  artifacts.snap  artifacts.snap1  bar.js  basic.rs  build_bench_rome_ts.rs  build_bench_threejs10x.rs  c.js  commonjs.js  d.js  dd.js  deno_bundle.rs  dev.rs  dynamic.js  entry.js  entry2.js  foo.js  index.js  lazy.rs  lib.js  main.js  proxy.js  share.js  shared.js  watch.rs  watch_new.rs
crates/rolldown/src/: STRUCTURE.md  bundler.rs  bundler_builder.rs  chunk_graph.rs  drop_in_another_thread.rs  error.rs  esm_init_obligations.rs  lib.rs  rebuild.rs  type_alias.rs  wasi_config.js  wasi_config.rs  watcher.rs
crates/rolldown/tests/: assert_no_circular_imports.mjs  esbuild.rs  fixtures.rs  integration_esbuild.rs  integration_fixtures.rs  integration_rolldown.rs  integration_rollup.rs  integration_test262.rs  practical.rs  test262_failures.json
crates/rolldown_binding/: Cargo.toml  bak_package.json  build.rs  index.d.ts  index.js  package.json
crates/rolldown_binding/src/: async_runtime.rs  bench_oxc_transformer.rs  bench_vize_transformer.rs  binding_bundler.rs  binding_bundler_impl.rs  binding_dev_engine.rs  binding_dev_options.rs  binding_watcher_bundler.rs  bundler.rs  classic_bundler.rs  env_config.rs  lib.rs  native_bridge.rs  new_watcher.rs  output.rs  output_chunk.rs  parallel_js_plugin_registry.rs  thread_safe_plugin_registry.rs  transform.rs  transform_cache.rs  type_aliases.rs  watcher.rs  worker_manager.rs
crates/rolldown_binding_wasm/: Cargo.toml  package.json
crates/rolldown_binding_wasm/src/: lib.rs
crates/rolldown_binding_watcher/: Cargo.toml
crates/rolldown_binding_watcher/src/: js_watcher.rs  js_watcher_options.rs  lib.rs
crates/rolldown_cli_native/: Cargo.toml
crates/rolldown_cli_native/src/: main.rs
crates/rolldown_common/: Cargo.toml
crates/rolldown_common/src/: barrel_info.rs  entry_point.rs  exports_kind.rs  file_emitter.rs  file_path.rs  import_record.rs  index.d.ts  lib.rs  module_id.rs  module_path.rs  module_resolution.rs  module_type.rs  named_export.rs  named_import.rs  part.rs  raw_path.rs  resolved_export.rs  resolved_path.rs  source_map_gen_msg.rs  stmt_info.rs  symbol_ref.rs  type_aliases.rs  wasi_features.d.ts  wasi_features.js  wasi_features.rs  wrap_kind.rs
crates/rolldown_common/tests/: README.md  package-lock.json  package.json  platform-strings.test.ts  tsconfig.json  vitest.config.ts  wasi-platform.test.ts
crates/rolldown_css/: Cargo.toml
crates/rolldown_css/src/: css_ast.rs  css_compiler.rs  lib.rs
crates/rolldown_debug/: Cargo.toml
crates/rolldown_debug/src/: build_id_propagate_layer.rs  debug_data_propagate_layer.rs  debug_formatter.rs  init_tracing.rs  lib.rs  static_data.rs  trace_action_macro.rs  utils.rs
crates/rolldown_debug_action/: Cargo.toml
crates/rolldown_debug_action/src/: lib.rs
crates/rolldown_dev/: Cargo.toml
crates/rolldown_dev/examples/: dev.rs
crates/rolldown_dev/src/: bundle_coordinator.rs  bundling_task.rs  dev_context.rs  dev_engine.rs  lib.rs  type_aliases.rs  watcher_event_handler.rs
crates/rolldown_dev/tests/: spec.rs
crates/rolldown_dev_common/: Cargo.toml
crates/rolldown_devtools_action/: Cargo.toml
crates/rolldown_devtools_action/src/: lib.rs
crates/rolldown_devtools_metrics/: Cargo.toml
crates/rolldown_devtools_metrics/src/: graph.rs  lib.rs  render.rs  report.rs  tests.rs
crates/rolldown_ecmascript/: Cargo.toml
crates/rolldown_ecmascript/src/: ast_snippet.rs  compiler.rs  constants.rs  ecma_compiler.rs  ecma_module_view_factory.rs  lib.rs
crates/rolldown_ecmascript_utils/: Cargo.toml
crates/rolldown_ecmascript_utils/src/: ast_factory.rs  ast_snippet.rs  injected_expression.rs  lib.rs  quote.rs  scope.rs  source_utils.rs
crates/rolldown_error/: Cargo.toml
crates/rolldown_error/src/: diagnostic.rs  error.rs  error_code.rs  errors.rs  event_kind.rs  inter_error.rs  lib.rs  locator.rs  type_aliases.rs  utils.rs
crates/rolldown_filter_analyzer/: Cargo.toml
crates/rolldown_filter_analyzer/src/: lib.rs  test.rs
crates/rolldown_filterable_analyzer/: Cargo.toml
crates/rolldown_filterable_analyzer/src/: lib.rs  main.rs  test.rs
crates/rolldown_fs/: Cargo.toml
crates/rolldown_fs/src/: box_dyn_file_system.rs  file_system.rs  lib.rs  memory.rs  os.rs  vfs.rs
crates/rolldown_fs_watcher/: Cargo.toml
crates/rolldown_fs_watcher/src/: debounced_poll_fs_watcher.rs  debounced_recommended_fs_watcher.rs  (+10 more)
crates/rolldown_lang_json/: Cargo.toml
crates/rolldown_loader_utils/: Cargo.toml
crates/rolldown_node_binding/: Cargo.toml  build.rs  index.d.ts  package.json
crates/rolldown_oxc/: Cargo.toml
crates/rolldown_oxc_utils/: Cargo.toml
(+13314 files in other folders)
