[workspace]
members = ["./crates/*", "tasks/*"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://rolldown.rs/"
license = "MIT"
repository = "https://github.com/rolldown/rolldown"

[workspace.lints.clippy]
# Guidelines
# - We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
# - Group are enabled with priority -1, so we could easily override some specific rules.
#   - https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section

# --- restriction https://doc.rust-lang.org/clippy/usage.html#clippyrestriction
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny" # Must be opt-in
print_stderr = "deny" # Must be opt-in
allow_attributes = "deny"

# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
fn_to_numeric_cast_any = "deny"
mixed_read_write_in_expression = "deny"
precedence_bits = "deny"
suspicious_xor_used_as_pow = "deny"
assertions_on_result_states = "deny"
unused_result_ok = "deny"
as_underscore = "deny"
deref_by_slicing = "deny"
empty_enum_variants_with_brackets = "deny"
pathbuf_init_then_push = "deny"
pub_without_shorthand = "deny"
self_named_module_files = "deny"
string_lit_chars_any = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
large_include_file = "deny"

# --- pedantic #https://doc.rust-lang.org/clippy/usage.html#clippypedantic
# To write the best rust code, pedantic group is enabled by default.
pedantic = { level = "deny", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"

# Wizards, naming is too hard.
module_inception = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

trivially_copy_pass_by_ref = "allow"
struct_field_names = "allow"
unused_self = "allow"
wrong_self_convention = "allow"

# Forwarding `Result` is a common pattern, this rule is too pedantic.
missing_errors_doc = "allow"

# #[must_use] is creating too much noise for this codebase, it does not add much value except nagging
# the programmer to add a #[must_use] after clippy has been run.
# Having #[must_use] everywhere also hinders readability.
must_use_candidate = "allow"

doc_markdown = "allow"
needless_for_each = "allow"
new_without_default = "allow"
# TODO: should review this rule.
missing_panics_doc = "allow"

# --- nursery https://doc.rust-lang.org/clippy/usage.html#clippynursery
# We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
nursery = { level = "warn", priority = -1 }
# `const` functions do not make sense for our project because this is not a `const` library.
# This rule also confuses newcomers and forces them to add `const` blindlessly without any reason.
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
# FIXME https://github.com/rust-lang/rust-clippy/issues/15429 - False positive with serde skip_serializing
zero_sized_map_values = "allow"
# False positive with derive_more debug attribute syntax
literal_string_with_formatting_args = "allow"
# Too many changes required across the codebase
collapsible_if = "allow"
too_long_first_doc_paragraph = "allow"
single_match_else = "allow"
single_option_map = "allow"
map_unwrap_or = "allow"
equatable_if_let = "allow"
string_lit_as_bytes = "allow"
needless_collect = "allow"
iter_with_drain = "allow"
unnecessary_struct_initialization = "allow"
trivial_regex = "allow"

[workspace.dependencies]
# publish = true
rolldown = { version = "1.2.0", path = "crates/rolldown" }
rolldown_common = { version = "1.2.0", path = "crates/rolldown_common" }
rolldown_dev = { version = "1.2.0", path = "crates/rolldown_dev" }
rolldown_dev_common = { version = "1.2.0", path = "crates/rolldown_dev_common" }
rolldown_devtools = { version = "1.2.0", path = "crates/rolldown_devtools" }
rolldown_devtools_action = { version = "1.2.0", path = "crates/rolldown_devtools_action" }
rolldown_devtools_metrics = { version = "1.2.0", path = "crates/rolldown_devtools_metrics" }
rolldown_ecmascript = { version = "1.2.0", path = "crates/rolldown_ecmascript" }
rolldown_ecmascript_utils = { version = "1.2.0", path = "crates/rolldown_ecmascript_utils" }
rolldown_error = { version = "1.2.0", path = "crates/rolldown_error" }
rolldown_fs = { version = "1.2.0", path = "crates/rolldown_fs" }
rolldown_fs_watcher = { version = "1.2.0", path = "crates/rolldown_fs_watcher" }
rolldown_plugin = { version = "1.2.0", path = "crates/rolldown_plugin" }
rolldown_plugin_chunk_import_map = { version = "1.2.0", path = "crates/rolldown_plugin_chunk_import_map" }
rolldown_plugin_asset_module = { version = "1.2.0", path = "crates/rolldown_plugin_asset_module" }
rolldown_plugin_copy_module = { version = "1.2.0", path = "crates/rolldown_plugin_copy_module" }
rolldown_plugin_bundle_analyzer = { version = "1.2.0", path = "crates/rolldown_plugin_bundle_analyzer" }
rolldown_plugin_data_url = { version = "1.2.0", path = "crates/rolldown_plugin_data_url" }
rolldown_plugin_esm_external_require = { version = "1.2.0", path = "crates/rolldown_plugin_esm_external_require" }
rolldown_plugin_hmr = { version = "1.2.0", path = "crates/rolldown_plugin_hmr" }
rolldown_plugin_isolated_declaration = { version = "1.2.0", path = "crates/rolldown_plugin_isolated_declaration" }
rolldown_plugin_lazy_compilation = { version = "1.2.0", path = "crates/rolldown_plugin_lazy_compilation" }
rolldown_plugin_oxc_runtime = { version = "1.2.0", path = "crates/rolldown_plugin_oxc_runtime" }
rolldown_plugin_replace = { version = "1.2.0", path = "crates/rolldown_plugin_replace" }
rolldown_plugin_utils = { version = "1.2.0", path = "crates/rolldown_plugin_utils" }
rolldown_plugin_vite_alias = { version = "0.1.0", path = "crates/rolldown_plugin_vite_alias" }
rolldown_plugin_vite_build_import_analysis = { version = "0.1.0", path = "crates/rolldown_plugin_vite_build_import_analysis" }
rolldown_plugin_vite_dynamic_import_vars = { version = "0.1.0", path = "crates/rolldown_plugin_vite_dynamic_import_vars" }
rolldown_plugin_vite_import_glob = { version = "0.1.0", path = "crates/rolldown_plugin_vite_import_glob" }
rolldown_plugin_vite_json = { version = "0.1.0", path = "crates/rolldown_plugin_vite_json" }
rolldown_plugin_vite_load_fallback = { version = "0.1.0", path = "crates/rolldown_plugin_vite_load_fallback" }
rolldown_plugin_vite_manifest = { version = "0.1.0", path = "crates/rolldown_plugin_vite_manifest" }
rolldown_plugin_vite_module_preload_polyfill = { version = "0.1.0", path = "crates/rolldown_plugin_vite_module_preload_polyfill" }
rolldown_plugin_vite_react_refresh_wrapper = { version = "0.1.0", path = "crates/rolldown_plugin_vite_react_refresh_wrapper" }
rolldown_plugin_vite_reporter = { version = "0.1.0", path = "crates/rolldown_plugin_vite_reporter" }
rolldown_plugin_vite_resolve = { version = "1.2.0", path = "crates/rolldown_plugin_vite_resolve" }
rolldown_plugin_vite_transform = { version = "0.1.0", path = "crates/rolldown_plugin_vite_transform" }
rolldown_plugin_vite_web_worker_post = { version = "0.1.0", path = "crates/rolldown_plugin_vite_web_worker_post" }
rolldown_resolver = { version = "1.2.0", path = "crates/rolldown_resolver" }
rolldown_sourcemap = { version = "1.2.0", path = "crates/rolldown_sourcemap" }
rolldown_std_utils = { version = "1.2.0", path = "crates/rolldown_std_utils" }
rolldown_testing = { version = "0.1.0", path = "crates/rolldown_testing" }
rolldown_testing_config = { version = "0.1.0", path = "crates/rolldown_testing_config" }
rolldown_tracing = { version = "1.2.0", path = "crates/rolldown_tracing" }
rolldown_utils = { version = "1.2.0", path = "crates/rolldown_utils" }
rolldown_watcher = { version = "1.2.0", path = "crates/rolldown_watcher" }
rolldown_workspace = { version = "1.2.0", path = "crates/rolldown_workspace" }
string_wizard = { version = "1.2.0", path = "crates/string_wizard", features = ["serde"] }

#
anyhow = "1.0.103"
append-only-vec = "0.1.8"
arcstr = { version = "1.2.0", default-features = false }
ariadne = { package = "rolldown-ariadne", version = "0.6.0" }
async-channel = "2.5.0"
async-scoped = "0.9.0"
base-encode = "0.3.1"
base64-simd = "0.8.0"
bitflags = "2.13.0"
blake3 = "1.8.5"
cow-utils = "0.1.3"
criterion2 = { version = "3.0.4", default-features = false }
dashmap = "6.2.1"
derive_more = { version = "2.1.1", features = ["debug"] }
dunce = "1.0.5" # Normalize Windows paths to the most compatible format, avoiding UNC where possible
fast-glob = "1.0.1"
flate2 = { version = "=1.1.9", features = ["zlib-rs"] }
form_urlencoded = "1.2.2"
futures = "0.3.32"
glob = "0.3.3"
heck = "0.5.0"
# Pinned to the no-ICU 1.0.0 backend to keep IDNA support turned off.
# See crates/rolldown_plugin_vite_resolve/Cargo.toml for the full rationale.
idna_adapter = "=1.0.0"
ignore = "0.4.27"
indexmap = "2.14.0"
infer = { version = "0.22.0", default-features = false }
insta = "1.48.0"
itertools = "0.15.0"
itoa = "1.0.18"
json-escape-simd = "3.1.1"
json-strip-comments = "3"
jsonschema = { version = "0.48.0", default-features = false }
memchr = "2.8.2"
mimalloc-safe = "0.1.64"
mime = "0.3.17"
nodejs-built-in-modules = "1.0.0"
nom = "8.0.0"
num-bigint = "0.5.1"
num_cpus = "1.17"
owo-colors = "4.3.0"
parking_lot = "0.12.5"
path-posix = "0.0.1"
percent-encoding = "2.3.2"
petgraph = "0.8.3"
phf = { version = "0.14.0", features = ["macros"] }
pnp = "0.12.10"
rayon = "1.12.0"
# Default features drop the `\p{…}` Unicode property tables (gencat/script/age/bool/segment),
# which no hardcoded pattern uses. `unicode-perl`/`unicode-case` are kept so `\w \d \s \b` and
# `(?i)` stay Unicode-aware. User patterns needing `\p{…}` fall back to `regress` via `HybridRegex`.
regex = { version = "1.13.0", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
  "unicode-case",
] }
regress = "0.11.1"
rolldown-notify = "10.5.0"
rolldown-notify-debouncer-full = "0.7.9"
rustc-hash = { version = "2.1.3" }
schemars = "1.2.1"
self_cell = "1.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
simdutf8 = "0.1.5"
smallvec = { version = "1.15.2", features = ["union"] }
sugar_path = { version = "3", features = ["cached_current_dir"] }
supports-color = "3"
terminal_size = "0.4.4"
testing_macros = "1.0.1"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.23", default-features = false }
ts-rs = "12.0"
typedmap = "0.6.0"
url = "2.5.8"
uuid = "1.23.4"
vfs = "0.13.0"
walkdir = "2.5.0"
xxhash-rust = "0.8.16"

prettyplease = "0.3.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "3", default-features = false }

# napi
# Keep the `tracing` feature on: `#[napi]` logs every binding call, which helps debug deadlocks
# (e.g. #7289) by showing which napi function is pending.
napi = { version = "3", features = ["async", "anyhow", "tracing", "object_indexmap"] }
napi-build = { version = "2" }
napi-derive = { version = "3", default-features = false, features = ["type-def", "tracing"] }

# oxc crates with the same version
oxc = { version = "0.141.0", features = [
  "ast_visit",
  "transformer",
  "minifier",
  "mangler",
  "semantic",
  "codegen",
  "serialize",
  "isolated_declarations",
  "regular_expression",
] }
oxc_allocator = { version = "0.141.0", features = ["pool"] }
# Depended on directly only to enable `disable_old_builder` (removes oxc's deprecated
# old AstBuilder API); the `oxc` umbrella crate has no passthrough feature for it.
oxc_ast = { version = "0.141.0", features = ["disable_old_builder"] }
oxc_ecmascript = { version = "0.141.0" }
oxc_napi = { version = "0.141.0" }
oxc_str = { version = "0.141.0" }
oxc_minify_napi = { version = "0.141.0" }
oxc_parser_napi = { version = "0.141.0" }
oxc_transform_napi = { version = "0.141.0" }
oxc_traverse = { version = "0.141.0" }

# oxc crates in their own repos
# Versions must be relaxed for usage in oxc.
# Please update with `cargo update oxc_resolver oxc_resolver_napi oxc_sourcemap oxc_index oxc-browserslist`
oxc_index = { version = "5", features = [
  "rayon",
  "serde",
] } # https://github.com/oxc-project/oxc-index-vec
oxc_resolver = { version = "11.24.2", features = [
  "yarn_pnp",
] } # https://github.com/oxc-project/oxc-resolver
oxc_resolver_napi = { version = "11.24.2", default-features = false, features = ["yarn_pnp"] }
oxc_sourcemap = { version = "8.1.0" } # https://github.com/oxc-project/oxc-sourcemap

[profile.dev]
# Minimal debug info to speed up local and CI builds.
debug = "line-tables-only"

[profile.test]
# Minimal debug info to speed up local and CI builds.
debug = "line-tables-only"

[profile.release]
codegen-units = 1
debug = false # Set to `true` for debug information
lto = "fat"
opt-level = 3
strip = "symbols" # Set to `false` for debug information

[profile.release-debug]
debug = true
inherits = "release"

[profile.profile]
debug = "line-tables-only"
strip = false
lto = "thin"
inherits = "release"

[profile.release-wasi]
inherits = "release"
opt-level = "s"
# napi-rs generates *-debug.*.wasm files with these information
# it will strip these information for non-debug files
debug = "full"
strip = "none"
