[package]
name = "crate-usage-analyzer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rayon = "1.10"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "visit"] }
walkdir = "2.5"
