[package]
name = "bench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
doctest = false
test = false

[dependencies]
criterion2 = { workspace = true, features = ["async_tokio"] }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
rolldown_testing = { workspace = true }
rolldown_workspace = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[[bench]]
harness = false
name = "bundle"

[[bench]]
harness = false
name = "scan"

[features]
codspeed = ["criterion2/codspeed"]
