[package]
name                 = "rolldown-wasm"
version              = "0.1.0"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rolldown     = { path = "../rolldown/" }
rolldown_fs  = { path = "../rolldown_fs" }
tokio        = { workspace = true, default-features = false, features = ["rt", "macros", "sync"] }

sugar_path = { workspace = true }
